--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,14 @@
             <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="black">Studio</span></h3></a>
             <nav>
             <ul>
-                <li><a href="index.html" class="black">Agencja</a></li>
-                <li><a href="" class="blue">Portfolio</a></li>
-                <li><a href="" class="black">Kontakt</a></li>
+                <li><a href="index.html" class="black link">Agencja</a></li>
+                <li><a href="" class="black link">Portfolio</a></li>
+                <li><a href="" class="black link">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a class="grey" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="grey" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="grey link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="grey link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
@@ -130,10 +130,10 @@
         m. Warszawa, Aleje Jerozolimskie 21
         </address>
         <address>
-        <a href="mailto:info@example.com" class="text-adres color-adres">info@example.com</a>
+        <a href="mailto:info@example.com" class="text-adres color-adres link">info@example.com</a>
         </address>
         <address>
-        <a href="phone:+48111111111" class="text-adres color-adres">(+48)111 111 111</a>
+        <a href="phone:+48111111111" class="text-adres color-adres link">(+48)111 111 111</a>
         </address>
     </footer>
     </body>
