--- a/portfolio.html
+++ b/portfolio.html
@@ -25,103 +25,106 @@
             </ul>
         </header>
         <main>
+        <section>    
             <button class="button" type="button">Wszystkie</button> 
             <button class="button" type="button">Strony</button> 
             <button class="button" type="button">Aplikacje</button> 
             <button class="button" type="button">Dizajn</button> 
             <button class="button" type="button">Marketing</button> 
+        </section>    
         <section>
-        <figure>
+        <ul>
+            <li><figure>
             <img src="images\Technocrack.jpg" 
             alt="Technocrack"
             width="370"
             height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Technocrack</h3>
                 <p class="text-figcaption3">Strona internetowa</p>
-            </ul>
-        </figcaption>
-        </figure>
-        <figure>
+            </figcaption>
+            </figure></li>
+            <li><figure>
             <img src="images\Grafika New Orlean vs Golden Star.jpg" 
             alt="Grafika New Orlean vs Golden Star"
             width="370"
             height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Grafika New Orlean vs Golden Star</h3>
                 <p class="text-figcaption3">Dizajn</p>
-        </figcaption>
-        </figure>
-        <figure>
+            </figcaption>
+            </figure></li>
+            <li><figure>
             <img src="images\Restauracja Seafood.jpg" 
             alt="Restauracja Seafood"
             width="370"
             height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Restauracja Seafood</h3>
                 <p class="text-figcaption3">Aplikacja</p>
-        </figcaption>
-        </figure>
-        <figure>          
+            </figcaption>
+            </figure></li>
+            <li><figure>          
             <img src="images\Projekt Prime.jpg" 
             alt="Projekt Prime"
             width="370"
             height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Projekt Prime</h3>
                 <p class="text-figcaption3">Marketing</p>
-        </figcaption>
-        </figure>
-        <figure>          
+            </figcaption>
+            </figure></li>
+            <li><figure>          
             <img src="images\Projekt Boxes.jpg" 
             alt="Projekt Boxes"
             width="370"
             height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Projekt Boxes</h3>
                 <p class="text-figcaption3">Aplikacja</p>
-        </figcaption>
-        </figure>
-        <figure>          
+            </figcaption>
+            </figure></li>
+            <li><figure>          
             <img src="images\Inspiration has no Borders.jpg" 
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Inspiration has no Borders</h3>
                 <p class="text-figcaption3">Strona internetowa</p>
-        </figcaption>
-        </figure> 
-        <figure>          
+            </figcaption>
+            </figure> 
+            <li><figure>          
             <img src="images\Magazyn Limited Edition.jpg" 
                 alt="Magazyn Limited Edition"
                 width="370"
                 height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Magazyn Limited Edition</h3>
                 <p class="text-figcaption3">Dizajn</p>
-        </figcaption>
-        </figure>
-        <figure>          
+            </figcaption>
+            </figure></li>
+            <li><figure>          
             <img src="images\Projekt LAB.jpg" 
                 alt="Projekt LAB"
                 width="370"
                 height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Projekt LAB</h3>
                 <p class="text-figcaption3">Marketing</p>
-        </figcaption>
-        </figure>
-        <figure>          
+            </figcaption>
+            </figure></li>
+            <li><figure>          
             <img src="images\Growing Business.jpg" 
                     alt="Growing Business"
                     width="370"
                     height="294">
-        <figcaption>
+            <figcaption>
                 <h3 class="text-figcaption2">Growing Business</h3>
                 <p class="text-figcaption3">Aplikacja</p>
-        </figcaption>
-        </figure>    
+            </figcaption>
+            </figure></li>    
+        </ul>
         </section>
     </main>
     <footer class="area">
