--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,14 @@
             </ul>
         </header>
         <main>
-        <section>    
-            <button class="button" type="button">Wszystkie</button> 
-            <button class="button" type="button">Strony</button> 
-            <button class="button" type="button">Aplikacje</button> 
-            <button class="button" type="button">Dizajn</button> 
-            <button class="button" type="button">Marketing</button> 
+        <section> 
+            <ul>
+                <li><button class="button" type="button">Wszystkie</button></li>
+                <li><button class="button" type="button">Strony</button></li> 
+                <li><button class="button" type="button">Aplikacje</button></li> 
+                <li><button class="button" type="button">Dizajn</button></li>
+                <li><button class="button" type="button">Marketing</button></li>
+            </ul> 
         </section>    
         <section>
         <ul>
